# alpm-experimental

./: .gitignore  Cargo.toml  README.md
benchmarking/: reports.txt
examples/: read_only.rs  simple.rs
src/: alpm_desc.rs  db.rs  error.rs  lib.rs  mutation.rs  package.rs  pkg.rs  signing.rs  util.rs  version.rs
src/alpm_desc/: de.rs  de_error.rs  mod.rs  ser.rs  ser_error.rs
src/db/: local.rs  mod.rs  sync.rs
src/db/local/: mod.rs  package.rs
src/db/sync/: package.rs
