[package]
name = "alpm"
version = "0.1.0"
authors = ["Richard Dodd <richard.dodd@itp-group.co.uk>"]

[dependencies]
bitflags =  "1"
failure = "0.1"
failure_derive = "0.1"
#fs2 = "0.4" # we can use this in future for extra locking
itertools = "0.7"
lockfile = "0.2"
log = "0.4"
nom = "4"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
tempfile = "3"
atoi = "0.2"

[dev-dependencies]
env_logger = "0.5"