[package]
name = "alpm"
version = "0.1.0"
authors = ["Richard Dodd <richard.dodd@itp-group.co.uk>"]

[dependencies]
bitflags =  "1"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
fs2 = "0.4" # we can use this in future for extra locking
gpgme = "0.7"
itertools = "0.7"
lazy_static = "1"
lockfile = "0.2"
log = "0.4"
nom = "4"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
tempfile = "3"
atoi = "0.2"
libflate = "0.1"
mtree = "0.4"
derivative = "1"

[target.'cfg(not(windows))'.dependencies]
uname = "0.1"

[dev-dependencies]
env_logger = "0.5"
users = "0.7"
humansize = "1"
clap = "2"

# For profiling
[profile.release]
debug = true
